noinst_LIBRARIES=libjsoncpp.a
libjsoncpp_a_CPPFLAGS=-I../include
libjsoncpp_a_LIBADD= 
libjsoncpp_a_SOURCES=json_batchallocator.h   json_reader.cpp\
		      json_valueiterator.inl json_internalarray.inl\
		      json_tool.h      json_writer.cpp\
		      json_internalmap.inl    json_value.cpp 
AM_CFLAGS = -g 
